--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 // Build Docker image
-                sh 'docker build -t MyImage .'
+                sh 'docker build -t my-image .'
             }
         }
 
