--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,8 +34,7 @@ pipeline {
         stage('k8s') {
             steps {
 
-                sh 'export KUBECONFIG=$KUBE_CONFIG_FILE'
-                sh 'kubectl run myapp --image=ghassenlbabida/my-image:latest'
+                sh ' export KUBECONFIG=$KUBE_CONFIG_FILE && kubectl run myapp --image=ghassenlbabida/my-image:latest '
             }
         }
 
