--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,6 +16,14 @@ pipeline {
             }
         }
 
+    stages {
+        stage('sonarqube_scanner') {
+            steps {
+                sh '/opt/sonar-scanner-5.0.1.3006/bin/sonar-scanner   -Dsonar.projectKey=ghassen   -Dsonar.sources=.   -Dsonar.host.url=http://172.17.0.1:9000   -Dsonar.token=sqp_97e55582584aff36da2e870c0499239edf7ac991C
+'
+            }
+        }
+
         stage('Build Docker Image') {
             steps {
                 // Build Docker image
