--- a/jenkinsfile
+++ b/jenkinsfile
@@ -44,6 +44,13 @@ pipeline {
                 sh ' export KUBECONFIG=$KUBE_CONFIG_FILE && kubectl run projet --image=ghassenlbabida/my-image:latest '
             }
         }
+     stage('Ansible Deployment') {
+            steps {
+               
+                    sh 'ansible-playbook -i inventory.yml playbook.yml'
+                
+            }
+        }
 
      //   stage('prometheus & grafana') {
        //     steps {
