--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
         stage('k8s') {
             steps {
 
-                sh ' export KUBECONFIG=$KUBE_CONFIG_FILE && kubectl run projet --image=ghassenlbabida/my-image:latest '
+                sh ' export KUBECONFIG=$KUBE_CONFIG_FILE && kubectl run mp --image=ghassenlbabida/my-image:latest '
             }
         }
      stage('Ansible Deployment') {
