--- a/package.json
+++ b/package.json
@@ -15,6 +15,16 @@
     "uuid": "^9.0.0",
     "wait-port": "^1.0.4"
   },
+  
+  "devDependencies": {
+    "jest": "^26.6.3"  // Use the latest version
+  },
+  "scripts": {
+    "test": "jest",
+    // ... other scripts ...
+  },
+  // ... other package.json contents ...
+
   "resolutions": {
     "ansi-regex": "5.0.1"
   },
