--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   },
   
   "devDependencies": {
-    "jest": "^26.6.3"  // Use the latest version
+    "jest": "^26.6.3"  
   },
   "scripts": {
     "test": "jest",
-    // ... other scripts ...
+   
   },
-  // ... other package.json contents ...
+  
 
   "resolutions": {
     "ansi-regex": "5.0.1"
