--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
     "mysql2": "^2.3.3",
     "sqlite3": "^5.1.2",
     "uuid": "^9.0.0",
-    "wait-port": "^1.0.4"
+    "wait-port": "^1.0.4",
     "jest": "^26.6.3"  
-  },
-  "scripts": {
-    "test": "jest",
   },
   "resolutions": {
     "ansi-regex": "5.0.1"
@@ -34,4 +31,4 @@
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1"
   }
-
+}
