--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "uuid": "^9.0.0",
     "wait-port": "^1.0.4",
     "jest": "^26.6.3"  
+    "supertest": "^6.1.3"
   },
   "resolutions": {
     "ansi-regex": "5.0.1"
