--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "sqlite3": "^5.1.2",
     "uuid": "^9.0.0",
     "wait-port": "^1.0.4",
-    "jest": "^26.6.3"  
+    "jest": "^26.6.3", 
     "supertest": "^6.1.3"
   },
   "resolutions": {
