--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 // Build Docker image
-                sh 'docker build -t mymage .'
+                sh 'docker build -t myage .'
          }
        }
        // stage('Push Docker Image') {
