--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 // Build Docker image
-                sh 'docker build -t myage .'
+                sh 'docker build -t myge .'
          }
        }
        // stage('Push Docker Image') {
@@ -65,7 +65,7 @@ pipeline {
         stage('k8s') {
             steps {
 
-                sh ' export KUBECONFIG=$KUBE_CONFIG_FILE && kubectl run mmmp --image=ghassenlbabida/my-image:latest '
+                sh ' export KUBECONFIG=$KUBE_CONFIG_FILE && kubectl run mmpp --image=ghassenlbabida/my-image:latest '
             }
         }
      stage('Ansible Deployment') {
