--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,7 +33,7 @@ pipeline {
             steps {
                 // Push Docker image
                 sh 'docker login -u ghassenlbabida -p ghassen123 '
-                sh 'docker tag my-image ghassenlbabida/g:latest'
+                sh 'docker tag g ghassenlbabida/g:latest'
                 sh 'docker push ghassenlbabida/g:latest'
             }
         }
