--- a/jenkinsfile
+++ b/jenkinsfile
@@ -84,8 +84,7 @@ pipeline {
             sh 'kubectl create ns monitoring'
             sh 'helm install prometheus prometheus-community/kube-prometheus-stack --namespace monitoring'
         } catch (Exception e) {
-            // Handle any exceptions or errors that occur within the steps
-            // You can print an error message or take other appropriate actions here
+             echo " the pipeline will continue."
         }
     }
 }
