--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,17 +26,17 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 // Build Docker image
-                sh 'docker build -t g .'
+                sh 'docker build -t application .'
          }
        }
-      //  stage('Push Docker Image') {
-            //steps {
-                // Push Docker image
-                //sh 'docker login -u ghassenlbabida -p ghassen123 '
-              //  sh 'docker tag g ghassenlbabida/g:latest'
-            //    sh 'docker push ghassenlbabida/g:latest'
-          //  }
-        //}
+        stage('Push Docker Image') {
+            steps {
+                 Push Docker image
+                sh 'docker login -u ghassenlbabida -p ghassen123 '
+                sh 'docker tag application ghassenlbabida/application:latest'
+                sh 'docker push ghassenlbabida/application:latest'
+            }
+        }
  stage('Terraform Init and Plan') {
             steps {
                 sh 'terraform init -input=false'
@@ -44,11 +44,11 @@ pipeline {
             }
         }
 
-        //stage('Terraform Apply') {
-          //  steps {
-            //    sh 'terraform apply -input=false -auto-approve tfplan'
-            //}
-        //}
+        //         stage('Terraform Apply') {
+          //                steps {
+            //                 sh 'terraform apply -input=false -auto-approve tfplan'
+            //                      }
+        //                    }
   stage('Run Tests') {
             steps {
                 script {
