--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,6 +19,7 @@ pipeline {
             steps {
                 script {
                     try {
+                        sh 'rm -rf node_modules/'
                         sh 'npm install'
                         sh 'npm test'
                     } catch (ex) {
