--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "jest": "^29.3.1",
+    "jest-junit": "^13.0.0", // Add this line
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1"
   },
