--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,19 +16,22 @@ pipeline {
             }
         }
  stage('Run Tests') {
-            steps {
-                script {
-                    try {
-                        sh 'rm -rf node_modules/'
-                        sh 'npm install'
-                        sh 'npm test'
-                    } catch (ex) {
-                        // Test failed, but we're catching the error to not fail the build
-                        echo "Tests failed, but the pipeline will continue."
-                    }
+    steps {
+        script {
+            try {
+                timeout(time: 1, unit: 'MINUTES') { // Set timeout to 1 minute
+                    sh 'rm -rf node_modules/'
+                    sh 'npm install'
+                    sh 'npm test'
                 }
+            } catch (ex) {
+                // Test failed or timeout reached, but we're catching the error to not fail the build
+                echo "Tests failed or timed out, but the pipeline will continue."
             }
         }
+    }
+}
+
 
     
       // stage('sonarqube_scanner') {
