--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,11 +34,11 @@ pipeline {
 
 
     
-      // stage('sonarqube_scanner') {
-        //     steps {
-          //      sh '/opt/sonar-scanner-5.0.1.3006/bin/sonar-scanner   -Dsonar.projectKey=ghassen   -Dsonar.sources=.   -Dsonar.host.url=http://172.17.0.1:9000   -Dsonar.token=sqp_97e55582584aff36da2e870c0499239edf7ac991 '
-            //}
-      // }
+       stage('sonarqube_scanner') {
+             steps {
+                sh '/opt/sonar-scanner-5.0.1.3006/bin/sonar-scanner   -Dsonar.projectKey=ghassen   -Dsonar.sources=.   -Dsonar.host.url=http://172.17.0.1:9000   -Dsonar.token=sqp_97e55582584aff36da2e870c0499239edf7ac991 '
+            }
+       }
 
         stage('Build Docker Image') {
             steps {
@@ -70,7 +70,7 @@ pipeline {
         stage('k8s') {
             steps {
 
-                sh ' export KUBECONFIG=$KUBE_CONFIG_FILE && kubectl run hela --image=ghassenlbabida/my-image:latest '
+                sh ' export KUBECONFIG=$KUBE_CONFIG_FILE && kubectl run imen --image=ghassenlbabida/my-image:latest '
             }
         }
      stage('Ansible Deployment') {
