--- a/jenkinsfile
+++ b/jenkinsfile
@@ -43,15 +43,15 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 // Build Docker image
-                sh 'docker build -t application .'
+                sh 'docker build -t my .'
          }
        }
         stage('Push Docker Image') {
             steps {
                  //Push Docker image
                 sh 'docker login -u ghassenlbabida -p ghassen123 '
-                sh 'docker tag application ghassenlbabida/application:latest'
-                sh 'docker push ghassenlbabida/application:latest'
+                sh 'docker tag my ghassenlbabida/my:latest'
+                sh 'docker push ghassenlbabida/my:latest'
             }
         }
  stage('Terraform Init and Plan') {
