--- a/jenkinsfile
+++ b/jenkinsfile
@@ -70,7 +70,7 @@ pipeline {
         stage('k8s') {
             steps {
 
-                sh ' export KUBECONFIG=$KUBE_CONFIG_FILE && kubectl run imenn --image=ghassenlbabida/my-image:latest '
+                sh ' export KUBECONFIG=$KUBE_CONFIG_FILE && kubectl run ghassen --image=ghassenlbabida/my:latest '
             }
         }
    stage('Ansible Deployment') {
